Drop extra padding we don't need w/ tool search position fixes.

--- a/client/galaxy/style/scss/base.scss
+++ b/client/galaxy/style/scss/base.scss
@@ -1600,10 +1600,6 @@ div.permissionContainer {
     background: $panel-bg-color;
     min-height: 100%;
     padding: 5px 10px;
-
-    .toolMenu {
-        padding-top: 10px;
-    }
 }
 
 div.toolSectionPad {
